# kitchenowl-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/prompts/: README.md  branch-workflow.prompt.md  create-commit.prompt.md  session-start.prompt.md  sync-template.prompt.md  troubleshoot.prompt.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: README.md  requirements.txt
db/: README.md
db/init/: README.md
db/migrations/: README.md
db/schema/: README.md
db/seeds/: README.md
docs/ADRs/: README.md
docs/SOPs/: README.md
docs/api/: README.md
docs/plans/: README.md
docs/session-history/: README.md
docs/specs/: README.md
frontend/: README.md
scripts/: README.md  setup_recipes.py
src/kitchenowl_mcp/: client.py  config.py  server.py
src/kitchenowl_mcp/tools/: meal_plan.py  recipes.py
tests/: README.md  conftest.py
